увеличивает статичную фотографию на 10% при ее наведениии

--- a/Druk_site_app/templates/Druk_site_app/index.html
+++ b/Druk_site_app/templates/Druk_site_app/index.html
@@ -27,10 +27,15 @@
         }
 
         .image_static {
-            position: absolute;
-            top: 650px;
-            left: 50%;
-            transform: translateX(-50%);
+          position: absolute;
+          top: 650px;
+          left: 50%;
+          transform: translateX(-50%);
+          transition: transform 0.3s ease-in-out;
+        }
+
+        .image_static:hover {
+          transform: translateX(-50%) scale(1.1); #увеличивает статичную фотографию на 10%
         }
 
         .image_write {
@@ -47,7 +52,7 @@
     </a>
     <img src="{% static 'images/1.jpg' %}" alt="Your Image" class="bg-image">
     <a href="/registration" class="image_static">
-    <img src="{% static 'images/cabinet.png' %}" alt="Your Image" >
+        <img src="{% static 'images/cabinet.png' %}" alt="Your Image" >
     </a>
 </body>
 </html>
