--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -1,4 +1,4 @@
+{% extends "Druk_site_app/index.html" %}
 {% block content %}
-<p>Вы вышли С вашего кабинета . Спасибо за Визит!</p>
-<button onclick="window.location.href='{% url 'Druk_site_app:index' %}'">Вернуться на главную страницу</button>
+<p class="all_text">Вы вышли c вашего кабинета . Спасибо за Визит!</p>
 {% endblock content %}
