--- a/Druk_site_app/templates/Druk_site_app/index.html
+++ b/Druk_site_app/templates/Druk_site_app/index.html
@@ -7,7 +7,8 @@
   <style>
     body {
       margin: 0;
-      position: relative;
+      padding: 0;
+      height: 100%;
     }
 
     @keyframes slide-down {
@@ -18,22 +19,37 @@
         top: 15px;
       }
     }
+    @font-face {
+      font-family: 'a_BosaNova Regular';
+      src: url('/static/fonts/a_BosaNova-Regular.ttf') format('truetype');
+      font-weight: normal;
+      font-style: normal;
+    }
+
+    .all_text {
+      font-family: arial;
+      font-size: 15px;
+      font-weight: normal;
+      color: #fff; /* белый цвет текста */
+      text-decoration: none; /* отмена подчеркивания */
+    }
+
   </style>
 </head>
 <body>
   <a href="{% url 'Druk_site_app:index' %}">
   {% if user.is_authenticated %}
-    Hello, {{ user.username }}.
-    <a href="{% url 'users:logout' %}">log out</a>
+    <p class="all_text">Hello, {{ user.username }}.</p>
+    <p class="all_text"><a href="{% url 'users:logout' %}">log out</a></p>
   {% else %}
-        <a href="{% url 'users:login' %}" style="position: absolute; top: 650px; left: 50%; transform: translateX(-50%); transition:
-      transform 0.3s ease-in-out;"
+        <a href="{% url 'users:login' %}" style="position: absolute; top: 650px;
+      left: 50%; transform: translateX(-50%); transition:transform 0.3s ease-in-out;"
       onmouseover="this.style.transform = 'translateX(-50%) scale(1.1)';"
       onmouseout="this.style.transform = 'translateX(-50%)';">
-      <img src="{% static 'images/cabinet.png' %}" alt="Your Image">
-           </a>
+      <img src="{% static 'images/cabinet.png' %}" alt="Your Image"> </a>
+
   {% endif %}
-  <img src="{% static 'images/1page.png' %}" alt="Your Image" style="position: relative; top: 900px; left: 50%; max-width:
+  <img src="{% static 'images/1page.png' %}" alt="Your Image" style="position: absolute; top: 900px; left: 50%; max-width:
      100%; max-height: 100%; transform: translate(-50%, -50%);"
      onmouseover="this.style.transform = 'translate(-50%, -50%) scale(1.2)';"
      onmouseout="this.style.transform = 'translate(-50%, -50%) scale(1)';"
@@ -48,7 +64,8 @@
   <img src="{% static 'images/1.jpg' %}" alt="Your Image" style="position: absolute;top: 0;left: 0; width: 100%; height:
    auto;z-index: -1;">
   <img src="{% static 'images/logo.png' %}" alt="Your Image" style="position: absolute; top: 260px; left: 150px;">
-
+      {% block content %}
+      {% endblock content %}
 <script>
   function scrollToBottom() {
     let currentScroll = 0;
