--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+{% extends "Druk_site_app/index.html" %}
 {% block content %}
   {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
+   <p class="all_text">Your username and password didn't match. Please try again.</p>
   {% endif %}
-  <form method="post" action="{% url 'users:login' %}" class="login-form">
+  <form method="post" action="{% url 'users:login' %}" class="login-form"style="position: relative; top: 100px; left: 40%;">
     {% csrf_token %}
     {{ form.as_p }}
     <button name="submit">log in</button>
