--- a/Druk_site_app/templates/Druk_site_app/index.html
+++ b/Druk_site_app/templates/Druk_site_app/index.html
@@ -33,7 +33,82 @@
       color: #fff; /* белый цвет текста */
       text-decoration: none; /* отмена подчеркивания */
     }
+    .form-wrapper {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      padding: 20px;
+      z-index: 9999;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
 
+    .register-form {
+      margin: 0 auto;
+      max-width: 700px;
+      max-height: 500px;
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.7);
+      border-radius: 10px;
+      color: #fff;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+    .register-form .column {
+      flex-basis: calc(50% - 10px);
+    }
+    .register-form label {
+      display: block;
+      margin-bottom: 5px;
+    }
+    .register-form input[type="text"],
+    .register-form input[type="password"] {
+      width: 80%;
+      padding: 5px;
+      margin-bottom: 3px;
+      border-radius: 5px;
+      border: none;
+      background-color: rgba(255, 255, 255, 0.1);
+      color: #fff;
+    }
+    .register-form input[type="email"] {
+      width: 80%;
+      padding: 5px;
+      margin-bottom: 3px;
+      border-radius: 5px;
+      border: none;
+      background-color: rgba(255, 255, 255, 0.1);
+      color: #fff;
+    }
+
+    .register-form button[type="submit"] {
+      color: #000;
+      padding: 6px;
+      border-radius: 5px;
+      cursor: pointer;
+      height: 30px;
+    }
+
+    .register-form button[type="submit"]:hover {
+      background-color: #000;
+      color: #fff;
+    }
+        .close-button {
+      position: fixed;
+      top: 250px;
+      left: 1200px;
+      padding: 5px 34px;
+      background-color: #fff;
+      color: #000;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+
+    .close-button:hover {
+      background-color: #000;
+      color: #fff;
+    }
   </style>
 </head>
 <body>
@@ -71,6 +146,7 @@
   <img src="{% static 'images/logo.png' %}" alt="Your Image" style="position: absolute; top: 260px; left: 150px;">
       {% block content %}
       {% endblock content %}
+
 <script>
   function moveUserInfo() {
     const userInfo = document.querySelector('#user-info');
@@ -93,6 +169,7 @@
   if (document.querySelector('#user-info')) {
     window.addEventListener('scroll', moveUserInfo);
   }
+
 </script>
 </body>
 </html>
